add copy as text to clipbord function

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <h2>Teams list</h2>
                 <table id="t-table"></table>
                 <div class="main__btns">
-                    <button type="button" class="btn btn--update">Update</button>
-                    <button type="button" class="btn btn--copy">Copy</button>
+                    <button type="button" class="btn btn--update">Update  list</button>
+                    <button type="button" class="btn btn--copy">Copy as text</button>
                 </div>
             </div>
         </div>
